# reachyclaw

./: .env.example  README.md  pyproject.toml
docs/: reachyclaw-latency-smoke.md
docs/plans/: 2026-05-04-001-feat-reachyclaw-low-latency-identity-plan.md  2026-05-04-002-fix-gemini-review-feedback-plan.md
scripts/: reachyclaw-smoke-openclaw.py
src/reachy_mini_openclaw/: config.py  gemini_live.py  gradio_app.py  main.py  openai_realtime.py  openclaw_bridge.py  realtime.py
src/reachy_mini_openclaw/audio/: __init__.py
tests/: test_audio.py  test_config.py  test_gemini_live_handler.py  test_openclaw_bridge.py  test_realtime_provider.py
