[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachyclaw"
version = "0.1.1"
description = "ReachyClaw - Give your OpenClaw AI agent a physical robot body with Reachy Mini. OpenClaw is the brain; OpenAI Realtime API handles voice I/O."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Shaun"}
]
keywords = [
    "reachyclaw",
    "reachy-mini",
    "openclaw",
    "robotics",
    "ai-assistant",
    "openai-realtime",
    "voice-conversation",
    "expressive-robot",
    "embodied-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    # OpenAI Realtime API
    "openai>=1.50.0",

    # Audio streaming
    "fastrtc>=0.0.17",
    "numpy",
    "scipy",

    # OpenClaw gateway client (WebSocket protocol)
    "websockets>=12.0",

    # Device identity signing for OpenClaw gateway auth
    "cryptography>=41.0",

    # Gradio UI
    "gradio>=4.0.0",

    # Environment
    "python-dotenv",

    # Reachy Mini robot SDK
    "reachy_mini>=1.2.13",
]

[project.optional-dependencies]
wireless = [
    "pygobject",
]
# YOLO-based face tracking (recommended - more accurate)
yolo_vision = [
    "opencv-python",
    "ultralytics",
    "supervision",
]
# MediaPipe-based face tracking (lighter weight alternative)
mediapipe_vision = [
    "mediapipe>=0.10.14",
]
# All vision options
all_vision = [
    "opencv-python",
    "ultralytics",
    "supervision",
    "mediapipe>=0.10.14",
]
# Legacy alias
vision = [
    "opencv-python",
    "ultralytics",
    "supervision",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
reachyclaw = "reachy_mini_openclaw.main:main"

[project.entry-points."reachy_mini_apps"]
reachyclaw = "reachy_mini_openclaw.main:ReachyClawApp"

[project.urls]
Homepage = "https://github.com/EdLuxAI/reachyclaw"
Documentation = "https://github.com/EdLuxAI/reachyclaw#readme"
Repository = "https://github.com/EdLuxAI/reachyclaw"
Issues = "https://github.com/EdLuxAI/reachyclaw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
